test/negative/105_arrow_instead_of_fatarrow.err
105_arrow_instead_of_fatarrow.fx:2:23: error: unexpected '->', did you mean '=>'?
